--- a/miller-marlee-marleemh/index copy.html
+++ b/miller-marlee-marleemh/index copy.html
@@ -2,13 +2,17 @@
 <html lang=en>
 <head>
 <style>
-.date {color: red}
-.name {color: green}
 </style> 
 <meta charset=utf-8>
-<title>ISAW GA3024</title>
+<title>Roman Legion: An Introduction</title>
 </head>
 <body>
-<p><a href="http://ifa.nyu.edu/">IFA</a></p>
-<p> <a href="http://en.wikipedia.org/wiki/Carnuntum">Carnuntum</a> (Καρνους, Carnous in Ancient Greek according to <span class="name">Ptolemy</span> was a Roman Legionary Fortress or castrum legionarium and also headquarters of the Pannonian fleet from <span class = "date">50 AD</span> . After the 1st century it was capital of the Pannonia Superior province. It also became a large city of 50,000 inhabitants.</p>
+<p><a href="http:// </a></p>
+<p> <a A Roman Legion (from Latin legio "military levy, conscription", from legere "to choose") was the largest unit of the Roman army involving from 3000 men in early times to over 5200 men in imperial times, consisting of centuries as the basic units.
+
+In the early Roman Kingdom the "legion" may have meant the entire Roman army but sources on this period are few and unreliable. The subsequent organization of legions varied greatly over time but legions were typically composed of around five thousand soldiers, divided during the republican era into three lines of ten maniples, and from about 100 BC into ten cohorts. Legions also included a small ala or cavalry unit. By the third century AD, the legion was a much smaller unit of about 1,000 to 1,500 men, and there were more of them. In the fourth century AD, East Roman border guard legions (limitanei) may have become even smaller.
+
+For most of the Roman Imperial period, the legions formed the Roman army's elite heavy infantry, recruited exclusively from Roman citizens, while the remainder of the army consisted of auxiliaries, who provided additional infantry and the vast majority of the Roman army's cavalry. (Provincials who aspired to citizenship gained it when honourably discharged from the auxiliaries). The Roman army, for most of the Imperial period, consisted mostly of auxiliaries rather than legions.
+
+Many of the legions founded before 40 BC were still active until at least the fifth century, notably Legio V Macedonica, which was founded by Augustus in 43 BC and was in Egypt in the seventh century during the Islamic conquest of Egypt. </p>
 </body>
