fixed place css, spacing

--- a/david-ratzan-dmratzan/ActaAlexWeek2.html
+++ b/david-ratzan-dmratzan/ActaAlexWeek2.html
@@ -27,7 +27,7 @@ p {
 }
 
 .place {
- text-decoration: underline
+  color: #A569BD  
 }
 
 figure {
@@ -53,11 +53,11 @@ figure figcaption {
     color: #DC7633;
  }
  
- .emperor {
+.emperor {
  font-variant: small-caps
  }
  
-  .date {
+.date {
   font-weight: bold
  }
  
