--- a/cole-emily-ecccole/assignment_week1.html
+++ b/cole-emily-ecccole/assignment_week1.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 
 <style>
-@import url(http://fonts.googleapis.com/earlyaccess/notosansegyptianhieroglyphs.css);
+@import url(https://fonts.googleapis.com/earlyaccess/notosansegyptianhieroglyphs.css);
 
 body {
     background-color: #26b6e3;
