--- a/stone-kelley-kelleystone/assignment1.html
+++ b/stone-kelley-kelleystone/assignment1.html
@@ -3,11 +3,11 @@
 <head>
 <style>
 body {
-    background-color: black;
+    background-color: gray;
 }
 
 h1 {
-    color: gray;
+    color: black;
     text-align: center;
 }
 
