--- a/lovejoy-nathan-ncl291/image_map_test.html
+++ b/lovejoy-nathan-ncl291/image_map_test.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<img src="isaw-ga-3024.github.io/lovejoy-nathan-ncl291/IvrizInscriptionPt1.jpg" alt="" usemap="#Map" />
+<img src="isaw-ga-3024.github.io/lovejoy-nathan-ncl291/IvrizInscriptionPt1.jpg" alt=""  />
 
 </body>
 
