--- a/lovejoy-nathan-ncl291/image_map_test.html
+++ b/lovejoy-nathan-ncl291/image_map_test.html
@@ -2,7 +2,7 @@
 <html>
 
 
-<img src="isaw-ga-3024.github.io/lovejoy-nathan-ncl291/IvrizInscriptionPt1.jpg" alt=""  />
+<img src="isaw-ga-3024.github.io/lovejoy-nathan-ncl291/IvrizInscriptionPt1.jpg" alt=""  >
 
 
 
