--- a/lovejoy-nathan-ncl291/image_map_test.html
+++ b/lovejoy-nathan-ncl291/image_map_test.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  </head>
+  <body>
 
 
-<img src="isaw-ga-3024.github.io/lovejoy-nathan-ncl291/IvrizInscriptionPt1.jpg" alt=""  >
+  <img src="IvrizInscriptionPt1.jpg" alt="ivriz"  >
+  </body>
 
 
 
