--- a/lovejoy-nathan-ncl291/image_map_test.html
+++ b/lovejoy-nathan-ncl291/image_map_test.html
@@ -5,7 +5,7 @@
   <body>
 
 
-  <img src="IvrizInscriptionPt1.jpg" alt="ivriz"  >
+  <img src="IvrizInscriptionPt1.jpg" alt="ivriz" height="500" width="50%" align="middle" >
   </body>
 
 
