--- a/lovejoy-nathan-ncl291/image_map_test.html
+++ b/lovejoy-nathan-ncl291/image_map_test.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>
-     <img src="IvrizInscriptionPt1.jpg" alt="ivriz" height="600" width="50%" align="middle" usemap="#Map" >
+     <img src="IvrizInscriptionPt1.jpg" alt="ivriz"  usemap="#Map" >
       <map name="Map" id="Map">
     <area alt="google" title="" href="www.google.com" shape="poly" coords="72,256,75,243,83,238,96,238,102,247,105,254,106,265" />
     <area alt="" title="" href="#" shape="poly" coords="124,281,131,269,134,265,130,247,122,240,116,242,108,250,108,265,113,274" />
