--- a/lovejoy-nathan-ncl291/image_map_test.html
+++ b/lovejoy-nathan-ncl291/image_map_test.html
@@ -7,7 +7,7 @@
     <p>
      <img src="IvrizInscriptionPt1.jpg" alt="ivriz"  usemap="#Map" >
       <map name="Map" id="Map">
-    <area alt="google" title="" href="www.google.com/index.html" shape="poly" coords="72,256,75,243,83,238,96,238,102,247,105,254,106,265" />
+    <area alt="google" title="" href="https://www.google.com/" shape="poly" coords="72,256,75,243,83,238,96,238,102,247,105,254,106,265" />
     <area alt="" title="" href="#" shape="poly" coords="124,281,131,269,134,265,130,247,122,240,116,242,108,250,108,265,113,274" />
     <area alt="" title="" href="#" shape="poly" coords="165,264,159,264,153,266,145,241,140,242,136,243,137,271,142,281,153,284" />
     <area alt="" title="" href="#" shape="poly" coords="60,36,42,13,34,33,47,47" />
