--- a/lovejoy-nathan-ncl291/qalatelmuqid_image_map.html
+++ b/lovejoy-nathan-ncl291/qalatelmuqid_image_map.html
@@ -7,7 +7,7 @@
     <p>
       <img src="qalatelmuqid_photo.jpg" usemap="#qalatelmuqid_map" border=0>
       <map name="qalatelmuqid_map">
-        <area name="EGO" shape="poly" coords="547,151,562,168,560,210,552,218,534,217,518,207,511,191,502,187,498,171,498,153,511,142,517,140,526,140,534,156,547,154" href="http://kinikhoyuk.hosting.nyu.edu/ahpal/"  alt="amu" title="amu" OnMouseOver="window.status='EGO'; return true" OnMouseOut="window.status=''; return true">
+        <area name="EGO" shape="poly" coords="547,151,562,168,560,210,552,218,534,217,518,207,511,191,502,187,498,171,498,153,511,142,517,140,526,140,534,156,547,154" href="http://kinikhoyuk.hosting.nyu.edu/ahpal/"  alt="EGO" title="EGO" OnMouseOver="window.status='EGO'; return true" OnMouseOut="window.status=''; return true">
         <area name="mi" shape="poly" coords="524,222,560,223,564,239,523,243,524,222" href="http://kinikhoyuk.hosting.nyu.edu/ahpal/"  alt="mi" title="mi" OnMouseOver="window.status='mi'; return true" OnMouseOut="window.status=''; return true">
         <area name="u" shape="poly" coords="453,182,453,163,451,148,494,151,496,180,489,182,488,164,465,162,463,182,454,181,454,181" href="http://kinikhoyuk.hosting.nyu.edu/ahpal/"  alt="u" title="u" OnMouseOver="window.status='u'; return true" OnMouseOut="window.status=''; return true">
         <area name="ra/i" shape="poly" coords="470,184,473,163,480,164,479,186,470,184" href="http://kinikhoyuk.hosting.nyu.edu/ahpal/"  alt="ra/i" title="ra/i" OnMouseOver="window.status='+ra/i'; return true" OnMouseOut="window.status=''; return true">
